# social_dashboard

./: .env.dist  .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  aerich.ini  alembic.ini  models.py  pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: bfc171d1b728_.py  c60bb5a8eaea_.py  d23656f9551c_.py
backend/app/: main.py  schemas.py
backend/app/api/: routers.py  views.py
backend/app/core/: config.py  init_app.py
backend/app/db/: alembic_base.py  base.py
backend/app/models/: __init__.py  social.py  user.py
backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/content/migrations/: 0001_initial.py
backend/apps/core/: models.py
backend/apps/dashboard/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/social_networks/: apps.py  models.py  serializers.py  views.py
backend/apps/social_networks/migrations/: 0001_initial.py
backend/dashboard/: filters.py  models.py  serializers.py  urls.py  views.py
backend/dashboard/migrations/: 0001_initial.py
backend/migration/: env.py
backend/migration/versions/: fbe597285cfa_.py
backend/migrations/models/: 0_20221218210359_init.py  1_20230423115010_update.py  2_20230807091234_update.py
backend/notebooks/: Ready Models.ipynb  Views.ipynb  Words analytics.ipynb
backend/project/: asgi.py  settings.py  urls.py  wsgi.py
backend/services/: parser.py  word_parser.py  worker.py
backend/services/api/: __init__.py  exceptions.py  models.py  telegram.py  vk.py
backend/user/migrations/: 0001_initial.py
(+48 files in other folders)
